--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
     <script> 
 
-    dogkeepers = {a: "1", b: "2", c: 3};
-
+//    dogkeepers = {a: "1", b: "2", c: 3};
+// Javascript iterations MDN example
     function Dog(name) {  this.name = name; }
-    dogkeepers.mydogname = function (d) { this.name = d;}
+  //  dogkeepers.mydogname = function (d) { this.name = d;}
     
     Dog.prototype.numLegs = 4;
 
