updated index and teaser

--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-</head>
+    </head>
 <body>
-    <script> 
+  <table border="5px">
+     <td> This is the first table row </td>
+    <tr> <td>this is the first table row</td> </tr>
+  </table>
+  <!--
+  <script> 
 
 //    dogkeepers = {a: "1", b: "2", c: 3};
 // Javascript iterations MDN example
@@ -37,6 +42,7 @@ console.log(prototypeProps);
 console.log(Object.getPrototypeOf(dogkeepers));
 
 </script>  
-     
+     -->
+<script src="teaser.js"></script>
 </body>
 </html>
