added products.js file

--- a/index.html
+++ b/index.html
@@ -5,12 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src = "teaser.js"> </script>
+    
     </head>
 <body>
   <table border="5px">
      <td> This is the first table row </td>
     <tr> <td>this is the first table row</td> </tr>
   </table>
+<br>
+<b> List Live output</b>
+<div>
+  <ul id="output"> 
+  
+  </ul> 
+  <br>
+  <b> Total : </b> 
+  <p></p><div id="output_p"> </div> </p>
+
+</div>
+
   <!--
   <script> 
 
@@ -42,7 +56,9 @@ console.log(prototypeProps);
 console.log(Object.getPrototypeOf(dogkeepers));
 
 </script>  
-     -->
+     
 <script src="teaser.js"></script>
+-->
+<script src = "productList.js"> </script>
 </body>
 </html>
