errors removed index3_events

--- a/index_3_Events.html
+++ b/index_3_Events.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1>This page is for events</h1>
-    <marquee> checking the old scroooooooooool</marquee>
+    <!-- <marquee> checking the old scroooooooooool</marquee> -->
 
 
     <input value="Click me" onclick="alert('Click!')" type="button"> <!-- inline event harly used-->
@@ -200,7 +200,7 @@ document.addEventListener("DOMContentLoaded", function() {
 <button id="elem_6">Click me Elem_6</button>
 <div id="output6"> output6</div> </p>
 <p>
-  <input id="itextbox1" type="text">
+  <label> Put your Text here :<input id="itextbox1" type="text"> </label>
 <div id="outtxt" > textoutput : </div>
 </p>
     <script>
