corrections and revision

--- a/index_1.html
+++ b/index_1.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1> My Index1 file for  JSobjects</h1>
+    <h1> My Index1 file for  JS Objects</h1>
     <p>
         <h1> Javascript Object Prototyping</h1>
         See the script for programming details.
