--- a/index_3_Events.html
+++ b/index_3_Events.html
@@ -204,6 +204,7 @@ document.addEventListener("DOMContentLoaded", function() {
 <div id="outtxt" > textoutput : </div>
 </p>
     <script>
+      //source inspiration : MDN introduction to events
        const butt6 = document.querySelector("#elem_6");
        const out6 = document.getElementById ("output6");
        const txtb1 = document.querySelector("#itextbox1");
