--- a/index_5_EventDelegation.html
+++ b/index_5_EventDelegation.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Event Listeners </title>
-    <link rel="stylesheet" href="./CSS_index_5_EventListeners.css">
+    <link rel="stylesheet" href="CSS_index_5_EventDelegation.css">
 
 </head>
 <body>
@@ -17,6 +17,6 @@
         </div>
     </div>
 
-<script src="./JS_Index5_EventListeners.js"></script>
+<script src="JS_Index5_EventDelegation.js"></script>
 </body>
 </html>
