--- a/Index_6.evenDelegation.html
+++ b/Index_6.evenDelegation.html
@@ -17,7 +17,7 @@
         <li id="tennis"> Tennis</li>
     </ul>
 
-    <button id="butt" type="submit">Add Sports</button>
+    <button id="button01" type="submit">Add Sports</button>
     <script src="js_index_6.js">   
     </script>
 </body>
